# Loup-garou

./: .env  main.py  pyproject.toml
lg_app/: .env  .env.example  README.md  app.py  fix_model.py  pyproject.toml
lg_app/assets/: cards.css
lg_app/services/: __init__.py  agent_runtime.py  agent_tools.py  db.py  game_engine.py  langchain_agent.py  llm_gm.py  roles.py  schemas.py  utils.py
