[project]
name = "loup-garou"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.6.1",
    "pydantic>=2.12.3",
    "pymongo>=4.15.3",
    "python-dotenv>=1.2.1",
    "streamlit>=1.51.0",
    "tenacity>=9.1.2",
    "uuid6>=2025.0.1",
]
